<resources>
    <string name="vacio"></string>
    <string name="app_name">SanAndresCustionario</string>
    <string name="tituloLGBTQI">LGBTQI+</string>
    <string name="crear_cuestionario">CREAR CUESTIONARIO</string>
    <string name="h_calle">Habitantes de la calle</string>
    <string name="LGBTQI">LGBTQI+</string>
    <string name="genero">Genero</string>
    <string name="cancelar">Cancelar</string>
    <string name="icono_c_cuestionario"> icono crear cuestionario</string>
    <string name="nombre">NOMBRE</string>
    <string name="Identificacion">NÚMERO DE IDENTIFICACIÓN</string>
    <string name="edad">EDAD</string>
    <string name="sexo">SEXO</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="guardar">GUARDAR</string>
    <string name="estadoCivil">ESTADO CIVIL</string>
    <string name="generoSexual">GÉNERO</string>
    <string name="religion">RELIGIÓN</string>
    <string name="grupoEtnico">GRUPO ETNICO/CULTURAL</string>
    <string name="procedencia">¿CÚAL ES SU LUGAR DE PROCEDENCIA?</string>
    <string name="viveActualmente">¿DÓNDE VIVE ACTUALMENTE? (Ciudad/Municipio/Corregimiento)</string>
    <string name="quienVive">¿CON QUIÉN VIVE?</string>


    <string name="conQuienVive">¿CON QUIÉN VIVE?</string>
    <string name="situacionFamiliar">SITUACIÓN FAMILIAR</string>
    <string name="tienesHijo">¿TIENE HIJOS?</string>
    <string name="cuantasPersonasVivenEnTuHogar">¿CUÁNTAS PERSONAS VIVEN EN TU HOGAR?</string>
    <string name="nivelEscolaridad">NIVEL DE ESCOLARIDAD</string>
    <string name="actualmenteTrabajando">¿ACTUALMENTE ESTÁ TRABAJANDO?</string>
    <string name="trabajandoEmpresaOrganizacionH">¿ACTUALMENTE ESTÁ TRABAJANDO EN UNA EMPRESA U ORGANIZACIÓN?</string>
    <string name="siEstaTrabajando">Si su respuesta es afirmativa, por favor continué con la encuesta.</string>
    <string name="estaTrabajandoEnUnaEmpresaL">¿ACTUALMENTE ESTÁ TRABAJANDO EN UNA EMPRESA U ORGANIZACIÓN?</string>
    <string name="eTrabaja">¿EN QUÉ EMPRESA U ORGANIZACIÓN TRABAJA?</string>
    <string name="sinoTrabaja">SI NO TRABAJA EN UNA EMPRESA U ORGANIZACIÓN, ES UD. AUTÓNOMO/EMPREENDEDOR?</string>
    <string name="tArtesania">¿TRABAJA UD. CON ARTESANÍA?</string>
    <string name="tComercio">¿TRABAJA UD.CON COMERCIO?</string>
    <string name="tTurismo">¿TRABAJA UD. CON TURISMO?</string>
    <string name="tAlimentos">¿TRABAJA UD. CON ACTIVIDADES DE MANEJO/VENTA DE ALIMENTOS?</string>


    <string name="percepcionHabitantes">PERCEPCIONES DE LOS HABITANTES DE LA CALLE Y SU VULNERABILIDAD EN SAN ANDRES </string>
    <string name="sai">Existen parientes suyos que viven en SAI?</string>
    <string name="cFamiliares">Con cual frecuencia mantiene Ud conversaciones con sus familiares? </string>
    <string name="contactoFamiliares">Con cuales familiares Ud mantiene contacto?</string>
    <string name="razonesCalle">Cuáles fueron las razones por las cuales Ud empezó a vivir en las calles?  (pregunta abierta)</string>
    <string name="sanandresAyuda">Como el departamento del archipiélago de San Andres Islas le ayuda con sus necesidades diarias?  (pregunta abierta)</string>
    <string name="unidadAtencion">Ud conoce unidades de atención para la población que vive en la calle en San Andres Islas?</string>
    <string name="beneficiarioPS">Ud es beneficiario de algún programa social en San Andres Islas?</string>
    <string name="tipoViolenciaH">Ud sufre algún tipo de violencia por ser habitante de la calle?</string>
    <string name="problemaSalud">Ud sufre de algún problema de salud?</string>
    <string name="vacunaCovid">Lograste vacunarse por COVID-19? Las dos dosis?</string>
    <string name="sanandresAsistencia">Como, en su opinión, el departamento de San Andres podría brindarles más asistencia?</string>
    <string name="embarazada">Si eres mujer, ¿estàs embarazada?</string>
    <string name="companeraEmbarazada">Si eres hombre, tu compañera estas embarazada?</string>
    <string name="sobrevivir">De que forma  Ud logra obtener alimentos para sobrevivir?</string>
    <string name="comentarioH">Hay alguna otra observación que Ud quiere comentarnos? Algo que no le preguntamos y le parece importante?</string>
    <string name="rolFamiliaG">¿CUÁL ES SU ROL EN SU FAMILIA? EN ESTE APARTADO PUEDE, TENER UNA O MÁS OPCIONES DE RESPUESTA, MARQUE LAS QUE APLIQUEN EN SU CASO:</string>
    <string name="padreG">Padre</string>
    <string name="madreG">Madre</string>
    <string name="esposoaG">Esposo/a</string>
    <string name="hijoaG">hijo/a</string>
    <string name="hermanoaG">hermano/a</string>
    <string name="rolOtroG">Otro</string>
    <string name="cuantasVivenTuHogarG">¿CUÁNTAS PERSONAS VIVEN EN TU HOGAR?</string>
    <string name="ingresoLaboralG">¿CUÁL ES SU INGRESO LABORAL APROXIMADAMENTE (SI LO TIENE)?</string>
    <string name="ingresoLaboralFamiliarG">APROXIMADAMENTE, ¿CUÁL ES EL INGRESO LABORAL DE SU UNIDAD FAMILIAR?</string>
    <string name="violenciaPorSerMujerG">Ud ya sufrió algún tipo de violencia en razón de ser mujer?</string>
    <string name="opinionPiropoG">En su opinión piropo es</string>
    <string name="opinionAcosoG">En su opinión acoso es</string>
    <string name="situacionFuncionarioG">Sobre su experiencia, ya ha vivido algunas de las situaciones abajo por algún funcionario público en San Andres Islas ? (maque todas las situaciones que ha vivido)</string>
    <string name="habitantesEncuestadoM">Habitantes de la calle encuestados:</string>
    <string name="acosoContraMujerG">El acoso sexual consiste en un tipo de violencia contra la mujer?</string>
    <string name="mujerResponsableAcosoG">¿La mujer que sufre acoso sexual tiene responsabilidad por la violencia?</string>
    <string name="asedioSexualG">Desde su experiencia, cuando ha experimentado asedio sexual, usted ha sentido</string>
    <string name="actitudesEnSuVidaG">De haber vivenciado acoso sexual ¿ha cambiado alguna de las siguientes actitudes en su vida?</string>
    <string name="mecanismoLegalG">¿Sabe Usted que Colombia tiene un mecanismo legal para combatir ese tipo de violencia contra la mujer? Está tipificado en el Código Penal en el Artículo 210-A. Acoso sexual. “El que en beneficio suyo o de un tercero y valiéndose de su superioridad manifiesta o relaciones de autoridad o de poder, edad, sexo, posición laboral, social, familiar o económica, acose, persiga, hostigue o asedie física o verbalmente, con fines sexuales no consentidos, a otra persona, incurrirá en prisión de uno (1) a tres (3) años.”</string>
    <string name="denunciariaAcosoSexualG">En el caso de que Ud fuera víctima de acoso sexual, Ud lo denunciaría?</string>
    <string name="situacionComercianteG">Sobre su experiencia, ya ha vivido algunas de las situaciones abajo por algún comerciante  en San Andres Islas ? (maque todas las situaciones que ha vivido)</string>
    <string name="mujerViolenciaGenero">¿La mujer que sufre violencia de genero tiene responsabilidad por la violencia?</string>
    <string name="experimentadoViolenciaGeneroG">Desde su experiencia, cuando ha experimentado violencia de genero, usted ha sentido</string>
    <string name="votariaMujerG">Ud votaría en una mujer para elecciones locales , regionales o nacionales?</string>
    <string name="desistioDenunciaG">Ud ya desistió de poner una denuncia por violencia de genero?</string>
    <string name="violenciaGeneroFamiliarG">Ud ya sufrió violencia de genero por un familiar? </string>
    <string name="violenciaGeneroParejaG">Ud ya sufrió violencia de genero por su pareja?</string>
    <string name="tratoIgualHombreG">Ud  recibe por sus servicios lo mismo que su colega hombre?</string>
    <string name="miedoMujerG">Cual es su mayor miedo como mujer?</string>
    <string name="comentarioG">Hay algún punto que no preguntamos que a Ud le gustaría comentarnos?</string>

    <string name="ingresoLaboralAproximadamente">¿CUÁL ES SU INGRESO LABORAL APROXIMADAMENTE (SI LO TIENE)?</string>
    <string name="ingresoLaboralUnidadFamiliar">APROXIMADAMENTE, ¿CUÁL ES EL INGRESO LABORAL DE SU UNIDAD FAMILIAR?</string>
    <string name="orientacionPolitica">ORIENTACIÓN POLÍTICA</string>
    <string name="perspectivaLGBTQI">PERSPECTIVA LGBTQI+</string>
    <string name="lPregunta1">1) Ud posee alguna discapacidad?</string>
    <string name="lPregunta2">2) Perteneces a alguna organización social LGBTQI+?</string>
    <string name="lPregunta3">3) Ud conoce sus derechos como parte de la comunidad LGBTQI+?</string>
    <string name="lPregunta4">4) Ud ya sufrió discriminación por ser LGBTQI+?</string>
    <string name="lPregunta5">5) Si la respuesta es afirmativa, por favor, nos comente sobre el caso o los casos sufridos:</string>
    <string name="lPregunta6">6) Cual es su orientación sexual?</string>
    <string name="lPregunta7">7) Es Ud intersexual?</string>
    <string name="lPregunta8">8) Hay razones para no expresar su identidad de genero en San Andres Islas?</string>
    <string name="extra1Pregunta8">Si la respuesta es afirmativa, por favor, nos informe las razones:</string>
    <string name="lPregunta9">9) Algún miembro de su familia sabe que Ud pertenece a la comunidad LGBTQI+?</string>
    <string name="extra1Pregunta9">Quienes son?</string>
    <string name="lPregunta10">10) Cuales fueron las reacciones de su familia al conocer su orientación sexual/identidad de genero?</string>
    <string name="lPregunta11">11) Has sufrido alguna de estas violencias por ser miembro del colectivo LGBTQI+?</string>
    <string name="lPregunta12">12) Como te sentiste cuando Ud pasó por una o mas de las situaciones descritas en la pregunta 11?</string>
    <string name="lPregunta13">13) Ud ya denunciò actos de discriminación sufridos por Ud por ser LGBTQI+?</string>
    <string name="lPregunta14">14) En su opinión, las denuncias resuelven?</string>
    <string name="extra1Pregunta14">Por qué? :</string>
    <string name="lPregunta15">15) En San Andres Islas existem campañas contra la discriminación de la población LGBTQI+?</string>
    <string name="lPregunta16">16) Como Ud piensa que el departamento de San Andres Islas puede apoyar a la comunidad LGBTQI+?</string>
    <string name="lPregunta17">17) Cuales políticas públicas hacen falta para el colectivo LGBTQI+ en su opinión?</string>
    <string name="lPregunta18">18) Hay alguna otra información que no le fue preguntada y que Ud le gustaría de comentar?</string>
    <string name="LGBTQIEncuestados">Número LGBTQI+ encuestados:</string>
    <string name="GeneroEncuestados">Número encuestado en Genero:</string>

    <string name="temaGeneroG">Como Ud percibe el tema de género? </string>
</resources>