<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cuentionarioCalle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".HabitantesCalle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/h_calle"
            android:textAlignment="center"
            android:textColor="#070707"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/labelNombreH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/editTextNombreH"
            android:text="@string/nombre"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextNombreH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/vacio"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:text="@string/vacio" />

        <TextView
            android:id="@+id/labelIdentificacionH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/editTextIdentificacionH"
            android:text="@string/Identificacion"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextIdentificacionH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/labelEdadH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/editTextEdadH"
            android:text="@string/edad"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextEdadH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/labelSexoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/sSexoH"
            android:text="@string/sexo"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sSexoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lEstadoCivilH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/sEstadoCivilH"
            android:text="@string/estadoCivil"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sEstadoCivilH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lGeneroH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/sGeneroH"
            android:text="@string/generoSexual"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sGeneroH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/eGeneroOH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="¿Cuál?"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lReligionH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/sReligionH"
            android:text="@string/religion"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sReligionH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/eReligionOH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="¿Cuál?"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lGrupoEtnicoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/sGrupoEtnicoH"
            android:text="@string/grupoEtnico"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sGrupoEtnicoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/eGrupoetnicoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="¿Cuál?"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lProcedenciaH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/eProcedenciaH"
            android:text="@string/procedencia"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eProcedenciaH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lViveActualmenteH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/eViveActualmenteH"
            android:text="@string/viveActualmente"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eViveActualmenteH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tSituacionFamiliarH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/situacionFamiliar"
            android:textColor="#050505"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tTienesHijosH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/sTienesHijoH"
            android:text="@string/tienesHijo"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sTienesHijoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/eTieneHijoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="¿Cuántos?"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lNivelEscolaridadH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/sNivelEscolaridadH"
            android:text="@string/nivelEscolaridad"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sNivelEscolaridadH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lTrabajandoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/sTrabajandoH"
            android:text="@string/actualmenteTrabajando"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sTrabajandoH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lETrabajaH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/eETrabajaH"
            android:text="@string/eTrabaja"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eETrabajaH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lSinoTrabajaH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:labelFor="@id/eSinoTrabajaH"
            android:text="@string/sinoTrabaja"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eSinoTrabajaH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/guardarFormH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="crearHabitanteCalles"
            android:text="@string/guardar" />

    </LinearLayout>
</ScrollView>